Personalize UI and branding for resume

--- a/index.html
+++ b/index.html
@@ -6,6 +6,11 @@
     <link rel="shortcut icon" type="image/png" href="public/styling/c_icon.png"/>
   </head>
   <body>
+    <footer style="text-align:center; padding:10px; color:#888; font-size:14px;">
+  © 2026 Prince Gupta | Pathfinding Visualizer |
+  Algorithms: BFS, DFS, Dijkstra, A*
+</footer>
+
     <div id='navbarDiv'>
      <nav class="navbar navbar-inverse">
        <div class="container-fluid">
