--- a/index.html
+++ b/index.html
@@ -6,11 +6,6 @@
     <link rel="shortcut icon" type="image/png" href="public/styling/c_icon.png"/>
   </head>
   <body>
-    <footer style="text-align:center; padding:10px; color:#888; font-size:14px;">
-  © 2026 Prince Gupta | Pathfinding Visualizer |
-  Algorithms: BFS, DFS, Dijkstra, A*
-</footer>
-
     <div id='navbarDiv'>
      <nav class="navbar navbar-inverse">
        <div class="container-fluid">
@@ -96,6 +91,20 @@
       <div id="algorithmDescriptor">Pick an algorithm and visualize it!</div>
       <table id='board'/>
     </div>
+    <footer style="
+  position: fixed;
+  bottom: 0;
+  width: 100%;
+  text-align: center;
+  padding: 8px 0;
+  background-color: #111;
+  color: #aaa;
+  font-size: 14px;
+  z-index: 9999;
+">
+  © 2026 Prince Gupta | Pathfinding Visualizer | Algorithms: BFS, DFS, Dijkstra, A*
+</footer>
+
   </body>
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
